--- a/src/index.html
+++ b/src/index.html
@@ -11,78 +11,78 @@
     <body>
         <div class="site-container">
             <header class="header">
-              <div class="header-container">
-                <div class="header-info">
-                    <ul class="ul ml--flex ml--center">
-                        <li class="ul__li">
-                            <a class="ul__link" href="#">Find a Store</a>
-                        </li>
-                        <li class="ul__li">
-                            <a class="ul__link" href="#">Sign In</a>
-                        </li>
-                        <li class="ul__li">
-                            <a class="ul__link" href="#">Join Now</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="header-icon">
-                    <a class="site-logo" href="#"
-                        ><img
-                            class="site-logo__img"
-                            src="https://stories.starbucks.com/uploads/2019/01/Photo_TBD-320x411_1-1.jpg"
-                            alt="Starbuck logo"
-                    /></a>
+                <div class="header-container">
+                    <div class="header-info">
+                        <ul class="ul ml--flex ml--center">
+                            <li class="ul__li">
+                                <a class="ul__link" href="#">Find a Store</a>
+                            </li>
+                            <li class="ul__li">
+                                <a class="ul__link" href="#">Sign In</a>
+                            </li>
+                            <li class="ul__li">
+                                <a class="ul__link" href="#">Join Now</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header-icon">
+                        <a class="site-logo" href="#"
+                            ><img
+                                class="site-logo__img"
+                                src="./img/site-logo.jpg"
+                                alt="Starbuck logo"
+                        /></a>
 
-                    <a href="javascript:void(0);" class="mob-menu-btn" onclick="hideNav()">
-                        <span class="mob-menu-btn__bar"></span>
-                        <span class="mob-menu-btn__bar"></span>
-                        <span class="mob-menu-btn__bar"></span>
-                    </a>
+                        <a href="javascript:void(0);" class="mob-menu-btn" onclick="hideNav()">
+                            <span class="mob-menu-btn__bar"></span>
+                            <span class="mob-menu-btn__bar"></span>
+                            <span class="mob-menu-btn__bar"></span>
+                        </a>
+                    </div>
+                    <nav class="nav">
+                        <div class="nav-desk">
+                            <ul class="ul">
+                                <li class="ul__li">
+                                    <a class="ul__link" href="#">Coffee</a>
+                                </li>
+                                <li class="ul__li">
+                                    <a class="ul__link" href="#">Tea</a>
+                                </li>
+                                <li class="ul__li">
+                                    <a class="ul__link" href="#">Menu</a>
+                                </li>
+                                <li class="ul__li">
+                                    <a class="ul__link" href="#">CoffeeHouse</a>
+                                </li>
+                                <li class="ul__li">
+                                    <a class="ul__link" href="#">Starbuck Rewards</a>
+                                </li>
+                                <li class="ul__li">
+                                    <a class="ul__link" href="#">Gift Cards</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="nav-mobile" id="nav-mobile">
+                            <ul class="nav-mobile__ul">
+                                <li class="nav-mobile__li">
+                                    <a class="nav-mobile__link" href="#">Coffee</a>
+                                </li>
+                                <li class="nav-mobile__li">
+                                    <a class="nav-mobile__link" href="#">Tea</a>
+                                </li>
+                                <li class="nav-mobile__li">
+                                    <a class="nav-mobile__link" href="#">Menu</a>
+                                </li>
+                                <li class="nav-mobile__li">
+                                    <a class="nav-mobile__link" href="#">CoffeeHouse</a>
+                                </li>
+                                <li class="nav-mobile__li">
+                                    <a class="nav-mobile__link" href="#">Starbuck Rewards</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
-                <nav class="nav">
-                    <div class="nav-desk">
-                        <ul class="ul">
-                            <li class="ul__li">
-                                <a class="ul__link" href="#">Coffee</a>
-                            </li>
-                            <li class="ul__li">
-                                <a class="ul__link" href="#">Tea</a>
-                            </li>
-                            <li class="ul__li">
-                                <a class="ul__link" href="#">Menu</a>
-                            </li>
-                            <li class="ul__li">
-                                <a class="ul__link" href="#">CoffeeHouse</a>
-                            </li>
-                            <li class="ul__li">
-                                <a class="ul__link" href="#">Starbuck Rewards</a>
-                            </li>
-                            <li class="ul__li">
-                                <a class="ul__link" href="#">Gift Cards</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="nav-mobile" id="nav-mobile">
-                        <ul class="nav-mobile__ul">
-                            <li class="nav-mobile__li">
-                                <a class="nav-mobile__link" href="#">Coffee</a>
-                            </li>
-                            <li class="nav-mobile__li">
-                                <a class="nav-mobile__link" href="#">Tea</a>
-                            </li>
-                            <li class="nav-mobile__li">
-                                <a class="nav-mobile__link" href="#">Menu</a>
-                            </li>
-                            <li class="nav-mobile__li">
-                                <a class="nav-mobile__link" href="#">CoffeeHouse</a>
-                            </li>
-                            <li class="nav-mobile__li">
-                                <a class="nav-mobile__link" href="#">Starbuck Rewards</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-              </div>  
             </header>
             <div class="hero">
                 <div class="container">
@@ -114,7 +114,9 @@
                     </div>
                     <div class="container">
                         <h2 class="sec-card__title">FALL. SEASON. LONG.</h2>
-                        <p class="sec-card__sub-title">*This fall drink returns for a limited time.</p>
+                        <p class="sec-card__sub-title">
+                            *This fall drink returns for a limited time.
+                        </p>
                         <p class="sec-card__p">
                             The cold brew&#39;s cocoa notes are perfectly complemented by flavors of
                             vanilla and real pumpkin which results in a smooth, well rounded
@@ -132,7 +134,9 @@
                             </div>
                             <div class="nutri__container">
                                 <div class="select-list">
-                                    <label class="select-list__label" for="select-list__input">Size</label>
+                                    <label class="select-list__label" for="select-list__input"
+                                        >Size</label
+                                    >
                                     <select class="select-list__input" id="select-list__input">
                                         <option value="Tall">Tall (12 fl oz)</option>
                                         <option value="Grande" selected>Grande (16 fl oz)</option>
@@ -233,9 +237,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
-                            <h2>Ingredients</h2>
-                            <p>
+                        <div class="inner-card">
+                            <h2 class="inner-card__title">Ingredients</h2>
+                            <p class="inner-card__p">
                                 <b>Ice, Brewed Coffee, Pumpkin Cream Cold Foam</b>
                                 [Cream (Cream, Mono And Diglycerides, Carageenan), Milk, Pumpkin
                                 Spice Sauce (Sugar, Condensed Skim Milk, Pumpkin Puree, Contains 2
@@ -246,11 +250,11 @@
                                 Sorbate, Citric Acid], <b>Pumpkin Spice Topping</b> [Cinnamon,
                                 Ginger, Nutmeg, And Cloves]
                             </p>
-                            <h2>Allergens</h2>
-                            <p>
+                            <h2 class="inner-card__title">Allergens</h2>
+                            <p class="inner-card__p">
                                 Not available for this item
                             </p>
-                            <p>
+                            <p class="inner-card__p">
                                 We cannot guarantee that any unpackaged products served in our
                                 stores are allergen-free because we use shared equipment to store,
                                 prepare, and serve them. Customers with allergies can find
@@ -286,14 +290,14 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer__social">
-                    <ul class="ul flex social-list">
+                    <ul class="ul ml--flex social-list">
                         <li class="social-list__li">
                             <a
                                 class="ul__link"
                                 href="http://www.facebook.com/starbucks"
                                 target="_blank"
                             >
-                                <img src="./img/icons/fb.svg" alt="" class="img" />
+                                <img src="./img/icons/fb.svg" alt="" class="img__media" />
                             </a>
                         </li>
                         <li class="social-list__li">
@@ -302,7 +306,7 @@
                                 href="http://www.twitter.com/starbucks"
                                 target="_blank"
                             >
-                                <img src="./img/icons/twitter.svg" alt="" class="img" />
+                                <img src="./img/icons/twitter.svg" alt="" class="img__media" />
                             </a>
                         </li>
                         <li class="social-list__li">
@@ -311,7 +315,7 @@
                                 href="https://www.pinterest.com/starbucks/"
                                 target="_blank"
                             >
-                                <img src="./img/icons/pin.svg" alt="" class="img" />
+                                <img src="./img/icons/pin.svg" alt="" class="img__media" />
                             </a>
                         </li>
                         <li class="social-list__li">
@@ -320,14 +324,14 @@
                                 href="https://instagram.com/starbucks/"
                                 target="_blank"
                             >
-                                <img src="./img/icons/ig.svg" alt="" class="img" />
+                                <img src="./img/icons/ig.svg" alt="" class="img__media" />
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="footer__line"></div>
-            <div class="footer__container">
+            <div class="container">
                 <div class="footer__email">
                     <p class="footer__email-p">Join our email list</p>
                     <form class="form" action="">
@@ -338,7 +342,7 @@
                 </div>
             </div>
             <div class="footer__line"></div>
-            <div class="footer__container">
+            <div class="container">
                 <div class="footer__bottom">
                     <ul class="ul ul--footer">
                         <li>
