--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,7 @@
                     </div>
                     <div class="header-card--icon">
                         <a class="site-logo" href="#"
-                            ><img
-                                class="media__img"
-                                src="./img/site-logo.jpg"
-                                alt="Starbuck logo"
+                            ><img class="media__img" src="./img/site-logo.jpg" alt="Starbuck logo"
                         /></a>
 
                         <a href="javascript:void(0);" class="mob-menu-btn" onclick="hideNav()">
@@ -111,12 +108,14 @@
                         <div class="media">
                             <img class="media__img" src="./img/cold_brew.gif" />
                         </div>
+                        <div class="container">
+                            <h2 class="card__title">FALL. SEASON. LONG.</h2>
+                            <p class="card__sub-title">
+                                *This fall drink returns for a limited time.
+                            </p>
+                        </div>
                     </div>
-                    <div class="container">
-                        <h2 class="card__title">FALL. SEASON. LONG.</h2>
-                        <p class="card__sub-title">
-                            *This fall drink returns for a limited time.
-                        </p>
+                    <div class="container card__content">
                         <p class="card__copy">
                             The cold brew&#39;s cocoa notes are perfectly complemented by flavors of
                             vanilla and real pumpkin which results in a smooth, well rounded
@@ -297,7 +296,7 @@
                                 href="http://www.facebook.com/starbucks"
                                 target="_blank"
                             >
-                                <img src="./img/icons/fb.svg" alt="" class="img__media" />
+                                <img src="./img/icons/fb.svg" alt="" class="media__img" />
                             </a>
                         </li>
                         <li class="social-list__li">
@@ -306,7 +305,7 @@
                                 href="http://www.twitter.com/starbucks"
                                 target="_blank"
                             >
-                                <img src="./img/icons/twitter.svg" alt="" class="img__media" />
+                                <img src="./img/icons/twitter.svg" alt="" class="media__img" />
                             </a>
                         </li>
                         <li class="social-list__li">
@@ -315,7 +314,7 @@
                                 href="https://www.pinterest.com/starbucks/"
                                 target="_blank"
                             >
-                                <img src="./img/icons/pin.svg" alt="" class="img__media" />
+                                <img src="./img/icons/pin.svg" alt="" class="media__img" />
                             </a>
                         </li>
                         <li class="social-list__li">
@@ -324,7 +323,7 @@
                                 href="https://instagram.com/starbucks/"
                                 target="_blank"
                             >
-                                <img src="./img/icons/ig.svg" alt="" class="img__media" />
+                                <img src="./img/icons/ig.svg" alt="" class="media__img" />
                             </a>
                         </li>
                     </ul>
